--- a/css/style.css
+++ b/css/style.css
@@ -4,22 +4,39 @@
   padding: 0;
 }
 
+/* #container {
+  width: 50vw;
+  border: 1px solid #000;
+  margin: auto;
+} */
+
 .city_block {
-  width: 400px;
-  height: 300px;
+  margin: 10px;
+  width: 300px;
+  height: 200px;
   background-size: cover;
   position: relative;
+  box-shadow: 2px 2px 2px #000;
 }
 
 .novara {
   background-image: url('../img/novara.jpg');
 }
+.pavia{
+  background-image: url('../img/pavia.jpg');
+}
+.vercelli{
+  background-image: url('../img/vercelli.jpg');
+}
 
 .layover {
-  
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.2);
 }
 
 .city_name {
+  text-transform: uppercase;
   color: #fff;
   text-shadow: 2px 2px 2px #000;
   position: absolute;
