--- a/css/style.css
+++ b/css/style.css
@@ -17,6 +17,7 @@
   background-size: cover;
   position: relative;
   box-shadow: 2px 2px 2px #000;
+  font-family: 'Raleway', sans-serif;
 }
 
 .novara {
