--- a/css/style.css
+++ b/css/style.css
@@ -4,13 +4,7 @@
   padding: 0;
 }
 
-/* #container {
-  width: 50vw;
-  border: 1px solid #000;
-  margin: auto;
-} */
-
-.city_block {
+.city_box {
   margin: 10px;
   width: 300px;
   height: 200px;
@@ -20,20 +14,20 @@
   font-family: 'Raleway', sans-serif;
 }
 
-.novara {
+.city_box.novara {
   background-image: url('../img/novara.jpg');
 }
-.pavia{
+.city_box.pavia{
   background-image: url('../img/pavia.jpg');
 }
-.vercelli{
+.city_box.vercelli{
   background-image: url('../img/vercelli.jpg');
 }
 
 .layover {
   width: 100%;
   height: 100%;
-  background-color: rgba(0, 0, 0, 0.2);
+  background-color: rgba(0, 0, 0, 0.4);
 }
 
 .city_name {
